Add Python package parser in API view build and packaging  (#546)
* Include python package into API view build and test CI
* Include python processor in API web project packaging

--- a/.azure-pipelines/apiview.yml
+++ b/.azure-pipelines/apiview.yml
@@ -9,6 +9,7 @@ trigger:
     include:
       - src/dotnet/APIView
       - src/java/apiview-java-processor
+      - packages/python-packages/api-stub-generator
 
 pr:
   branches:
@@ -21,6 +22,7 @@ pr:
     include:
       - src/dotnet/APIView
       - src/java/apiview-java-processor
+      - packages/python-packages/api-stub-generator
 
 variables:
   DotNetCoreVersion: '3.0.100'
@@ -29,6 +31,7 @@ variables:
   TestProjectPath: 'src/dotnet/APIView/APIViewTest/APIViewTest.csproj'
   NodeVersion: '12.x'
   BuildConfiguration: 'Release'
+  PythonParserPackagePath: 'packages/python-packages/api-stub-generator'
 
 stages:
   - stage: 'Main'
@@ -39,6 +42,12 @@ stages:
           vmImage: 'vs2017-win2016'
 
         steps:
+
+          - task: UsePythonVersion@0
+            displayName: 'Use Python 3.6'
+            inputs:
+              versionSpec: 3.6
+
           - task: DotNetCoreInstaller@2
             displayName: 'Use .NET Core sdk $(DotNetCoreVersion)'
             inputs:
@@ -68,6 +77,13 @@ stages:
               mavenPomFile: 'src/java/apiview-java-processor/pom.xml'
               goals: 'clean package'
 
+          - script: |
+              cd $(Build.SourcesDirectory)/$(PythonParserPackagePath)
+              pip install wheel
+              python setup.py bdist_wheel
+              cd $(Build.SourcesDirectory)
+            displayName: 'Build Python API Parser'
+
           - script: 'dotnet build $(WebProjectPath) -warnaserror'
             displayName: 'Build and Package'
             env:
@@ -96,10 +112,19 @@ stages:
 
       - job: 'Test'
 
+        dependsOn:
+          - 'Build'
+
         pool:
           vmImage: 'vs2017-win2016'
 
         steps:
+
+          - task: UsePythonVersion@0
+            displayName: 'Use Python 3.6'
+            inputs:
+              versionSpec: 3.6
+
           - task: DotNetCoreInstaller@2
             displayName: 'Use .NET Core sdk $(DotNetCoreVersion)'
             inputs:
@@ -116,6 +141,13 @@ stages:
               projects: '$(TestProjectPath)'
               arguments: --logger trx
               publishTestResults: false
+
+          - script: |
+              cd $(Build.SourcesDirectory)/$(PythonParserPackagePath)
+              pip install tox
+              tox
+              cd $(Build.SourcesDirectory)
+            displayName: 'Test Python Package Parser'
 
           - task: PublishTestResults@2
             condition: succeededOrFailed()
