--- a/packages/python-packages/api-stub-generator/tox.ini
+++ b/packages/python-packages/api-stub-generator/tox.ini
@@ -3,12 +3,9 @@
 envlist = test
 
 [testenv]
+deps = pytest
 ignore_args=--ignore=.tox --ignore=build --ignore=.eggs
 default_pytest_params = --junitxml={toxinidir}/test-junit-{envname}.xml --verbose --durations=10
-platform = linux: linux
-           macos: darwin
-           windows: win32
 commands = 
-    {envbindir}/python -m pip install {toxinidir}
     pytest {toxinidir}/tests
 
