Update the report for new issues to call out needs-attentions issues as well (#553)
* Update the constant name for 'needs-attention'

* Move the email sender object to another folder.

* Rename the repository name from 'repo' to 'name'

* Add style check to require explicit types.

Small refactoring of the existing report for new PRs and Issues.

* Add report about the issues that need attention from the product team.

* Use explicit types instead of var

* Merge the needs-attention report into the report about new issues and PRs.

--- a/tools/github-issues/Azure.Sdk.Tools.GitHubIssues/Azure.Sdk.Tools.GitHubIssues.csproj
+++ b/tools/github-issues/Azure.Sdk.Tools.GitHubIssues/Azure.Sdk.Tools.GitHubIssues.csproj
@@ -24,4 +24,7 @@
   <ItemGroup>
     <Content Remove="excluded_folder\**" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
 </Project>
