--- a/.gitignore
+++ b/.gitignore
@@ -290,6 +290,7 @@ PublishScripts/
 #*.nupkg
 # The packages folder can be ignored because of Package Restore
 **/[Pp]ackages/*
+!packages/java-packages/
 # except build/, which is used as an MSBuild target.
 !**/[Pp]ackages/build/
 # Uncomment if necessary however generally it will be regenerated when needed
