--- a/eng/common/pipelines/templates/steps/create-pull-request.yml
+++ b/eng/common/pipelines/templates/steps/create-pull-request.yml
@@ -35,27 +35,31 @@ steps:
   workingDirectory: ${{ parameters.WorkingDirectory }}
   ignoreLASTEXITCODE: true
 
-- pwsh: |
-    ${{ parameters.ScriptDirectory }}/git-branch-push.ps1 `
-      -PRBranchName "${{ parameters.PRBranchName }}" `
-      -CommitMsg "${{ parameters.CommitMsg }}" `
-      -GitUrl "https://$(azuresdk-github-pat)@github.com/${{ parameters.PROwner }}/${{ parameters.RepoName }}.git" `
-      -PushArgs "${{ parameters.PushArgs }}"
-
+- task: PowerShell@2
   displayName: Push changes
   workingDirectory: ${{ parameters.WorkingDirectory }}
   condition: and(succeeded(), eq(variables['HasChanges'], 'true'))
+  inputs:
+    pwsh: true
+    filePath: ${{ parameters.ScriptDirectory }}/git-branch-push.ps1
+    arguments: >
+      -PRBranchName "${{ parameters.PRBranchName }}"
+      -CommitMsg "${{ parameters.CommitMsg }}"
+      -GitUrl "https://$(azuresdk-github-pat)@github.com/${{ parameters.PROwner }}/${{ parameters.RepoName }}.git"
+      -PushArgs "${{ parameters.PushArgs }}"
 
-- pwsh: |
-    ${{ parameters.ScriptDirectory }}/Submit-PullRequest.ps1 `
-      -RepoOwner "${{ parameters.RepoOwner }}" `
-      -RepoName "${{ parameters.RepoName }}" `
-      -BaseBranch "${{ parameters.BaseBranchName }}" `
-      -PROwner "${{ parameters.PROwner }}" `
-      -PRBranch "${{ parameters.PRBranchName }}" `
-      -AuthToken "$(azuresdk-github-pat)" `
-      -PRTitle "${{ parameters.PRTitle }}"
-
+- task: PowerShell@2
   displayName: Create pull request
   workingDirectory: ${{ parameters.WorkingDirectory }}
   condition: and(succeeded(), eq(variables['HasChanges'], 'true'))
+  inputs:
+    pwsh: true
+    filePath: ${{ parameters.ScriptDirectory }}/Submit-PullRequest.ps1
+    arguments: >
+      -RepoOwner "${{ parameters.RepoOwner }}"
+      -RepoName "${{ parameters.RepoName }}"
+      -BaseBranch "${{ parameters.BaseBranchName }}"
+      -PROwner "${{ parameters.PROwner }}"
+      -PRBranch "${{ parameters.PRBranchName }}"
+      -AuthToken "$(azuresdk-github-pat)"
+      -PRTitle "${{ parameters.PRTitle }}"
