--- a/tools/github-issues/Azure.Sdk.Tools.GitHubIssues/Azure.Sdk.Tools.GitHubIssues.csproj
+++ b/tools/github-issues/Azure.Sdk.Tools.GitHubIssues/Azure.Sdk.Tools.GitHubIssues.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="CommandLine.Net" Version="2.0.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.3" />
     <PackageReference Include="Octokit" Version="0.36.0" />
+    <PackageReference Include="Polly" Version="7.2.1" />
     <PackageReference Include="Sendgrid" Version="9.12.0" />
   </ItemGroup>
   <ItemGroup>
