--- a/src/dotnet/Mgmt.CI.BuildTools/ci.yml
+++ b/src/dotnet/Mgmt.CI.BuildTools/ci.yml
@@ -1,6 +1,4 @@
-# External variables:
-# ProjectFile - The project to build and test. This variable is defined in pipeline web ui because we want to be able to provide it at queue time and that isn't supported in yaml yet.
-# VersioningProps - A collection of extra msbuild versioning properties like OfficialBuildId, PreReleaseVersionLabel, and DotNetFinalVersionKind
+# NOTE: Please refer to https://aka.ms/azsdk/engsys/ci-yaml before editing this file.
 
 trigger:
   - master
