Add C to notifications (#897)

--- a/eng/pipelines/notifications.yml
+++ b/eng/pipelines/notifications.yml
@@ -23,6 +23,8 @@ stages:
           PathPrefix: 'js'
         Java:
           PathPrefix: 'java'
+        C:
+          PathPrefix: 'c'
 
     pool:
       vmImage: ubuntu-16.04
