Add azure-sdk (#925)
Add azure-sdk to the list of repo's to update.

--- a/eng/pipelines/tools-repo-versioning.yml
+++ b/eng/pipelines/tools-repo-versioning.yml
@@ -28,6 +28,7 @@ jobs:
         ToolRepo: azure-sdk-tools
         ToolsRepoPath: $(Build.SourcesDirectory)
         Repos:
+          - azure-sdk
           - azure-sdk-for-android
           - azure-sdk-for-c
           - azure-sdk-for-cpp
