--- a/eng/pipelines/mirror-repos.yml
+++ b/eng/pipelines/mirror-repos.yml
@@ -28,30 +28,35 @@ jobs:
             TargetRepos: 
               Azure/azure-sdk-for-go-pr:
               azure-sdk/azure-sdk-for-go:
+              azure-sdk/azure-sdk-for-go-pr:
 
           Azure/azure-sdk-for-java:
             Branch: master
             TargetRepos: 
               Azure/azure-sdk-for-java-pr:
               azure-sdk/azure-sdk-for-java:
+              azure-sdk/azure-sdk-for-java-pr:
 
           Azure/azure-sdk-for-js:
             Branch: master
             TargetRepos:
               Azure/azure-sdk-for-js-pr:
               azure-sdk/azure-sdk-for-js:
+              azure-sdk/azure-sdk-for-js-pr:
 
           Azure/azure-sdk-for-net:
             Branch: master
             TargetRepos: 
               Azure/azure-sdk-for-net-pr:
               azure-sdk/azure-sdk-for-net:
+              azure-sdk/azure-sdk-for-net-pr:
 
           Azure/azure-sdk-for-python:
             Branch: master
             TargetRepos: 
               Azure/azure-sdk-for-python-pr:
               azure-sdk/azure-sdk-for-python:
+              azure-sdk/azure-sdk-for-python-pr:
 
           Azure/azure-sdk-for-ios:
             Branch: master
@@ -75,6 +80,7 @@ jobs:
             TargetRepos: 
               Azure/azure-cli-extensions-pr:
               azure-sdk/azure-cli-extensions:
+              azure-sdk/azure-cli-extensions-pr:
 
     - template: ./templates/steps/sync-repo-branch.yml
       parameters:
@@ -86,4 +92,4 @@ jobs:
             TargetRepos: 
               Azure/azure-sdk-for-python-pr:
               azure-sdk/azure-sdk-for-python:
-
+              azure-sdk/azure-sdk-for-python-pr:
