--- a/eng/pipelines/templates/steps/sync-directory.yml
+++ b/eng/pipelines/templates/steps/sync-directory.yml
@@ -39,6 +39,8 @@ steps:
         PushArgs: -f
         WorkingDirectory: $(System.DefaultWorkingDirectory)/${{ repo }}
         ScriptDirectory: $(System.DefaultWorkingDirectory)/eng/common/scripts
+        GHReviewersVariable: "System.PullRequest.Creator"
+        GHAssignessVariable: "System.PullRequest.Creator"
 
     - pwsh: |
         $PRData = "Azure;${{ repo }};$(Submitted.PullRequest.Number)"
