Switch to auto adding the `Central-EngSys` label (#1047)
This replaces the `EngSys` label.
Fixes #1045

--- a/eng/pipelines/templates/steps/sync-directory.yml
+++ b/eng/pipelines/templates/steps/sync-directory.yml
@@ -35,7 +35,7 @@ steps:
         CommitMsg: ${{ parameters.CommitMessage }}
         PRTitle: ${{ parameters.PRTitle }}
         PRBody: ${{ parameters.PRBody }}
-        PRLabels: "EngSys"
+        PRLabels: "Central-EngSys, EngSys"
         PushArgs: -f
         WorkingDirectory: $(System.DefaultWorkingDirectory)/${{ repo }}
         ScriptDirectory: $(System.DefaultWorkingDirectory)/eng/common/scripts
